--- a/notebooks/Data Wrangling.ipynb
+++ b/notebooks/Data Wrangling.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,6 +96,341 @@
     "df = df.sort_values(by=['team_id', 'date_time'])\n",
     "df['game_num'] = df.groupby('team_id').cumcount()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>game_id</th>\n",
+       "      <th>team_id</th>\n",
+       "      <th>HoA</th>\n",
+       "      <th>won</th>\n",
+       "      <th>settled_in</th>\n",
+       "      <th>head_coach</th>\n",
+       "      <th>goals</th>\n",
+       "      <th>shots</th>\n",
+       "      <th>hits</th>\n",
+       "      <th>pim</th>\n",
+       "      <th>powerPlayOpportunities</th>\n",
+       "      <th>powerPlayGoals</th>\n",
+       "      <th>faceOffWinPercentage</th>\n",
+       "      <th>giveaways</th>\n",
+       "      <th>takeaways</th>\n",
+       "      <th>date_time</th>\n",
+       "      <th>type</th>\n",
+       "      <th>game_num</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>15265</th>\n",
+       "      <td>2018020020</td>\n",
+       "      <td>1</td>\n",
+       "      <td>home</td>\n",
+       "      <td>True</td>\n",
+       "      <td>REG</td>\n",
+       "      <td>John Hynes</td>\n",
+       "      <td>5</td>\n",
+       "      <td>27</td>\n",
+       "      <td>24</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>49.2</td>\n",
+       "      <td>11</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2018-10-06</td>\n",
+       "      <td>R</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15327</th>\n",
+       "      <td>2018020048</td>\n",
+       "      <td>1</td>\n",
+       "      <td>home</td>\n",
+       "      <td>True</td>\n",
+       "      <td>REG</td>\n",
+       "      <td>John Hynes</td>\n",
+       "      <td>6</td>\n",
+       "      <td>36</td>\n",
+       "      <td>19</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>61.7</td>\n",
+       "      <td>9</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2018-10-11</td>\n",
+       "      <td>R</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15373</th>\n",
+       "      <td>2018020071</td>\n",
+       "      <td>1</td>\n",
+       "      <td>home</td>\n",
+       "      <td>True</td>\n",
+       "      <td>REG</td>\n",
+       "      <td>John Hynes</td>\n",
+       "      <td>3</td>\n",
+       "      <td>36</td>\n",
+       "      <td>19</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>61.2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2018-10-14</td>\n",
+       "      <td>R</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15387</th>\n",
+       "      <td>2018020078</td>\n",
+       "      <td>1</td>\n",
+       "      <td>home</td>\n",
+       "      <td>True</td>\n",
+       "      <td>REG</td>\n",
+       "      <td>John Hynes</td>\n",
+       "      <td>3</td>\n",
+       "      <td>34</td>\n",
+       "      <td>15</td>\n",
+       "      <td>13</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>44.3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2018-10-16</td>\n",
+       "      <td>R</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15413</th>\n",
+       "      <td>2018020091</td>\n",
+       "      <td>1</td>\n",
+       "      <td>home</td>\n",
+       "      <td>False</td>\n",
+       "      <td>REG</td>\n",
+       "      <td>John Hynes</td>\n",
+       "      <td>3</td>\n",
+       "      <td>30</td>\n",
+       "      <td>19</td>\n",
+       "      <td>19</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>54.3</td>\n",
+       "      <td>13</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2018-10-18</td>\n",
+       "      <td>R</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22555</th>\n",
+       "      <td>2018021202</td>\n",
+       "      <td>54</td>\n",
+       "      <td>home</td>\n",
+       "      <td>False</td>\n",
+       "      <td>REG</td>\n",
+       "      <td>Gerard Gallant</td>\n",
+       "      <td>2</td>\n",
+       "      <td>37</td>\n",
+       "      <td>28</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>48.1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2019-03-30</td>\n",
+       "      <td>R</td>\n",
+       "      <td>77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22572</th>\n",
+       "      <td>2018021211</td>\n",
+       "      <td>54</td>\n",
+       "      <td>away</td>\n",
+       "      <td>False</td>\n",
+       "      <td>OT</td>\n",
+       "      <td>Gerard Gallant</td>\n",
+       "      <td>3</td>\n",
+       "      <td>26</td>\n",
+       "      <td>40</td>\n",
+       "      <td>27</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>52.5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2019-03-31</td>\n",
+       "      <td>R</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22605</th>\n",
+       "      <td>2018021227</td>\n",
+       "      <td>54</td>\n",
+       "      <td>home</td>\n",
+       "      <td>True</td>\n",
+       "      <td>REG</td>\n",
+       "      <td>Gerard Gallant</td>\n",
+       "      <td>3</td>\n",
+       "      <td>31</td>\n",
+       "      <td>23</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>53.7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>19</td>\n",
+       "      <td>2019-04-02</td>\n",
+       "      <td>R</td>\n",
+       "      <td>79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22657</th>\n",
+       "      <td>2018021253</td>\n",
+       "      <td>54</td>\n",
+       "      <td>home</td>\n",
+       "      <td>False</td>\n",
+       "      <td>REG</td>\n",
+       "      <td>Gerard Gallant</td>\n",
+       "      <td>1</td>\n",
+       "      <td>38</td>\n",
+       "      <td>32</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>54.2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2019-04-05</td>\n",
+       "      <td>R</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22690</th>\n",
+       "      <td>2018021270</td>\n",
+       "      <td>54</td>\n",
+       "      <td>away</td>\n",
+       "      <td>False</td>\n",
+       "      <td>REG</td>\n",
+       "      <td>Gerard Gallant</td>\n",
+       "      <td>2</td>\n",
+       "      <td>31</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>53.3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2019-04-07</td>\n",
+       "      <td>R</td>\n",
+       "      <td>81</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2538 rows × 18 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          game_id  team_id   HoA    won settled_in      head_coach  goals  \\\n",
+       "15265  2018020020        1  home   True        REG      John Hynes      5   \n",
+       "15327  2018020048        1  home   True        REG      John Hynes      6   \n",
+       "15373  2018020071        1  home   True        REG      John Hynes      3   \n",
+       "15387  2018020078        1  home   True        REG      John Hynes      3   \n",
+       "15413  2018020091        1  home  False        REG      John Hynes      3   \n",
+       "...           ...      ...   ...    ...        ...             ...    ...   \n",
+       "22555  2018021202       54  home  False        REG  Gerard Gallant      2   \n",
+       "22572  2018021211       54  away  False         OT  Gerard Gallant      3   \n",
+       "22605  2018021227       54  home   True        REG  Gerard Gallant      3   \n",
+       "22657  2018021253       54  home  False        REG  Gerard Gallant      1   \n",
+       "22690  2018021270       54  away  False        REG  Gerard Gallant      2   \n",
+       "\n",
+       "       shots  hits  pim  powerPlayOpportunities  powerPlayGoals  \\\n",
+       "15265     27    24    8                       2               1   \n",
+       "15327     36    19   10                       4               1   \n",
+       "15373     36    19    6                       8               1   \n",
+       "15387     34    15   13                       6               1   \n",
+       "15413     30    19   19                       5               2   \n",
+       "...      ...   ...  ...                     ...             ...   \n",
+       "22555     37    28    8                       2               0   \n",
+       "22572     26    40   27                       2               0   \n",
+       "22605     31    23    4                       2               0   \n",
+       "22657     38    32    6                       1               0   \n",
+       "22690     31     9    6                       2               0   \n",
+       "\n",
+       "       faceOffWinPercentage  giveaways  takeaways  date_time type  game_num  \n",
+       "15265                  49.2         11         10 2018-10-06    R         0  \n",
+       "15327                  61.7          9         20 2018-10-11    R         1  \n",
+       "15373                  61.2          8         14 2018-10-14    R         2  \n",
+       "15387                  44.3          8         11 2018-10-16    R         3  \n",
+       "15413                  54.3         13         11 2018-10-18    R         4  \n",
+       "...                     ...        ...        ...        ...  ...       ...  \n",
+       "22555                  48.1          7         18 2019-03-30    R        77  \n",
+       "22572                  52.5         10          7 2019-03-31    R        78  \n",
+       "22605                  53.7          7         19 2019-04-02    R        79  \n",
+       "22657                  54.2          7         10 2019-04-05    R        80  \n",
+       "22690                  53.3          5          2 2019-04-07    R        81  \n",
+       "\n",
+       "[2538 rows x 18 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
